spacing fix

--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ footer {
         text-align: center;
         padding: 0rem 1rem 0;
         margin-top: -2rem;
-        margin-bottom: -1rem;
+        margin-bottom: -.5rem;
     }
     
     .mobile-header-extras p {
